# avo-chat-client

./: README.md  main.py
client-protocol/: CMakeLists.txt  main.c
client-protocol/include/: global.h  protocol.h
client-protocol/include/base/: initialize.h  select_base.h  socket_base.h
client-protocol/include/utils/: io_utils.h  log.h  str_utils.h
client-protocol/source/: global.c  protocol.c
client-protocol/source/base/: initialize.c  select_base.c  socket_base.c
client-protocol/source/utils/: io_utils.c  str_utils.c
glade_css/: style.css
glade_template/bak/: add_contact.glade  chat.glade  chat.glade~  login.glade
glade_template/chat/: chat.glade  chat.glade~
glade_template/login/: login.glade  login.glade~
glade_template/plus_menu/: add_contact.glade  create_group.glade~  join_group.glade  join_group.glade~
src/api/: __init__.py  api.py  protocol.py  requests_wrapper.py
src/controllers/: add_contact_controller.py  chat_controller.py  create_group_controller.py  join_group_controller.py  login_controller.py
src/exception/: __init__.py  business_exception.py
src/globals/: __init__.py  constants.py  threading_pool.py
src/utils/: __init__.py  cache_utils.py  common_utils.py  message_utils.py
src/wins/: add_contact.py  chat.py  create_group.py  join_group.py  login.py
